--- a/ui.html
+++ b/ui.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
+<h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5638/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5638/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -292,7 +292,7 @@
 <p><span class="badge badge-light">Irving, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -328,7 +328,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -394,7 +394,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=sk4DJhww&__jvsc=Twitter&bid=njXOmMwH'> Splash Damage Careers - UI Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=sk4DJhww&__jvsc=Twitter&bid=njXOmMwH'> Splash Damage Careers - UI Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
