--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=njSgpMw7'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -107,17 +111,17 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corti.recruitee.com/o/customer-facing-data-scientist'>
+<h5><a href='https://corti.recruitee.com/o/customer-facing-data-scientist'>
       Customer Facing Data Scientist - Corti
     </a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
+<h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -125,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -145,11 +149,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
+<h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -193,7 +197,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -241,7 +245,7 @@
 <p><span class="badge badge-light">United States  Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -253,7 +257,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -309,7 +313,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -317,7 +321,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Design and implement data science research projects that utilize advanced 
 statistical methods, such as regression analysis and machine learning, to 
@@ -348,7 +352,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -426,7 +430,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 management, exploratory analysis, regression and classification, prediction, and 
 data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/Massachusetts---Cambridge/Summer-2020-Intern---Data-Science_JR51450-1'>Summer 2020 Intern - Data Science</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/Massachusetts---Cambridge/Summer-2020-Intern---Data-Science_JR51450-1'>Summer 2020 Intern - Data Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Our data science interns are considered full time employees by their peers--in 
 fact, you will be expected to contribute right away as a member of our Scrum?...</p>
@@ -484,10 +488,6 @@ and?...</p>
 <h5><a href='https://boards.greenhouse.io/databricks/jobs/4475474002'>Job Application for Principal Data Scientist - Media & Entertainment at Databricks</a></h5> 
 <p><span class="badge badge-light">New York City Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n1eklMwb'>Freedom Financial Network Careers - Data Scientist (Contractor)</a></h5> 
-<p><span class="badge badge-light">San Mateo, California</span></p>
-<p>Posted on:: 2019-10-26</p>
 <hr/>
 
 
